# co-producer

./: .nojekyll  Cargo.toml  build.rs  index.html  robots.txt  search.json  sitemap.xml
docs/: _quarto.yml  index.qmd
frontend/: README.md  package-lock.json  package.json  quasar.config.ts
frontend/src/: App.vue  main.ts
frontend/src/boot/: axios.ts  pinia.ts
frontend/src/components/: EssentialLink.vue  GearList.vue  NavigationItem.vue  TagManagement.vue
frontend/src/composables/: useConfirmation.ts  useDialog.ts  useForm.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/lib/: notifications.ts  status-utils.ts  utils.ts
frontend/src/models/: artist.ts  common.ts  gear.ts  index.ts  progress.ts  project.ts  settings.ts  technique.ts
frontend/src/pages/: ArtistDetail.vue  ArtistList.vue  DashboardPage.vue  GearList.vue  HomePage.vue  IndexPage.vue  ProgressPage.vue  ProjectDetail.vue  ProjectForm.vue  ProjectList.vue  SettingsPage.vue  TagManagement.vue  TechniqueDetail.vue  TechniqueList.vue
frontend/src/router/: routes.ts
frontend/src/services/: api-mock.ts
frontend/src/stores/: artist-store.ts  gear-store.ts  progress-store.ts  project-store.ts  setting-store.ts  settings-store.ts  (+3 more)
src/: db.rs  error.rs  main.rs  model.rs  template.rs
src/handlers/: dashboard_handler.rs  mod.rs  routes.rs
src/utils/: app_state.rs
static/css/: custom.css
static/js/: app.js
templates/: base.html  index.html
templates/artisits/: detail.html  form.html
templates/dashboard/: index.html
templates/partials/: footer.html  header.html  sidebar.html
(+5 files in other folders)
