[package]
name = "co-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
axum = "0.8.1"
rust-embed = "8.5.0"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
deadpool = "0.10.0"
async-trait = "0.1.87"


[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
