[package]
name = "co-producer"
version = "0.1.0"
edition = "2021"
description = "An AI collaborator to help you create great music and become a better musician"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = { version = "1.0", features = ["loader"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
surrealdb = { version = "1.2", features = ["kv-rocksdb"] }
thiserror = "1.0"
async-trait = "0.1"
deadpool = "0.10"
rust-embed = "8.2"
anyhow = "1.0.97"
once_cell = "1.20.3"

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
